--- a/spreading_simulation.ipynb
+++ b/spreading_simulation.ipynb
@@ -7175,7 +7175,7 @@
     "        df['label'].value_counts()[0],\n",
     "        df['label'].value_counts()[1]\n",
     "    ))\n",
-    "    df.groupby(['TwM_tCurrent','label']).size().unstack(fill_value=0).plot.bar(title='Original Data Distribution')\n",
+    "#     df.groupby(['TwM_tCurrent','label']).size().unstack(fill_value=0).plot.bar(title='Original Data Distribution')\n",
     "    \n",
     "    columns = list(df.columns)\n",
     "    columns.remove('label')\n",
