documentation temp save

--- a/spreading_simulation.ipynb
+++ b/spreading_simulation.ipynb
@@ -65,8 +65,7 @@
     "    if y == 0:\n",
     "        return 0\n",
     "    else:\n",
-    "        return x/y\n",
-    "\n"
+    "        return x/y"
    ]
   },
   {
@@ -161,6 +160,11 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "# construct and extract features dataset based on the information in users and  network_simulation data.  \n",
+    "# current_min is number of minutes since the first seed, and all imformation before this time point is known.\n",
+    "# This function will only generate features for users between start_index and end_index. If current_features is not None, \n",
+    "# the function will update the features for users between start_index and end_index.\n",
     "def construct_features(users, network_simulation, start_index, end_index, current_min, current_features=None):\n",
     "    \n",
     "    current_time = current_min   \n",
@@ -786,7 +790,7 @@
     "    processed_dataframe = pd.DataFrame(features)\n",
     "    return processed_dataframe, network_simulation\n",
     "\n",
-    "def data_preparation_process(path_of_user_data, path_of_follower_list=None, path_of_friend_list=None, feature_file_path=None, network_file_path=None, start_hour=0, end_min=360):\n",
+    "def data_preparation_process(path_of_user_data, path_of_follower_list=None, path_of_friend_list=None, feature_file_path=None, network_file_path=None, end_min=360):\n",
     "    \n",
     "    users = load_pickle_file(path_of_user_data)\n",
     "    users.reset_index(drop =True , inplace =True)\n",
@@ -803,9 +807,9 @@
     "#     print(network_simulation)\n",
     "#     print(network_simulation['source_candidates'])\n",
     "#     print(network_simulation.at[1000,'source_candidates'])\n",
-    "    print(network_simulation[network_simulation['time_lapsed'].isnull() == False].index.values)\n",
+    "#     print(network_simulation[network_simulation['time_lapsed'].isnull() == False].index.values)\n",
     "#     print(list(features['infected_status']))\n",
-    "    print(list(features['infected_status']).count(1))\n",
+    "#     print(list(features['infected_status']).count(1))\n",
     "#     print(list(network_simulation[]))\n",
     "    save_pickle_file(feature_file_path,features)\n",
     "    save_pickle_file(network_file_path,network_simulation)\n",
@@ -7673,20 +7677,26 @@
     "        #network_simulation = simulation(features,initial_dataset,network_simulation,current_time)\n",
     "        this_timestep_network_simulation, predicted_infected_list = simulation(features,initial_dataset,network_simulation,current_time, model, infected_record)\n",
     "        #print(f\"current_time:{current_time}\")\n",
+    "        next_time_step = current_time+interval\n",
     "        \n",
     "#   ============================\n",
-    "        next_time_step = current_time+interval\n",
     "        initial_dataset = network_simulation_init(users, next_time_step)\n",
     "        end_index = len(initial_dataset[initial_dataset['time_lapsed'].isnull() == False].index.values)-1\n",
     "        true_predicted = 0\n",
     "        for each in predicted_infected_list:\n",
     "            if each > start_index and each< end_index:\n",
     "                true_predicted+=1\n",
+    "        precision = true_predicted/len(predicted_infected_list)\n",
+    "        recall = true_predicted/ (end_index - start_index)\n",
+    "        F1 = 2.0*precision*recall/(precision+recall)\n",
     "        print('++++++++At simulation period '+str(current_time)+' to '+str(next_time_step)+'++++++++')\n",
     "        print(str(end_index - start_index)+' users infected in reality')\n",
-    "        print('true_predicted: '+str(true_predicted))\n",
-    "        print('total predictedt: '+str(len(predicted_infected_list)))\n",
-    "        print('false: '+str(len(predicted_infected_list)-true_predicted))\n",
+    "        print('total positive prediction:  '+str(len(predicted_infected_list)))\n",
+    "        print('total true posisive: '+str(true_predicted))\n",
+    "        print('total false posisive: '+str(len(predicted_infected_list)-true_predicted))\n",
+    "        print('precision: '+str( precision ))\n",
+    "        print('recall: '+str(recall))\n",
+    "        print('F1: '+str(F1))\n",
     "        print('+++++++++++++++++++++++++++++++++++++++++++++')\n",
     "        \n",
     "        initial_features, initial_dataset = construct_features(users, initial_dataset, start_index, len(users), next_time_step, current_features=initial_features)\n",
@@ -7695,38 +7705,19 @@
     "#   ============================\n",
     "\n",
     "        current_time = next_time_step\n",
-    "\n",
+    "    network_simulation.to_csv(simulation_result_path,index=False)\n",
     "    print(f\"Simulation finished after {round((time.time() - start_time)/60,2)} minutes\")\n",
-    "#     network_simulation.to_csv(simulation_result_path,index=False)\n",
     "\n",
-    "#     simulation_comparison = pd.concat([network_simulation['time_lapsed'],users['time_lapsed']],axis = 1)\n",
-    "#     column_names = ['nw_time_lapsed','usr_time_lapsed']\n",
-    "#     simulation_comparison.columns = column_names\n",
-    "\n",
-    "#     simulation_comparison['both_infected'] = simulation_comparison.apply(lambda x: 1 if (np.isnan(x['nw_time_lapsed']) == False)\n",
-    "#                                                                               & (np.isnan(x['usr_time_lapsed']) == False)\n",
-    "#                                                                          & (x['usr_time_lapsed'] > current_time)\n",
-    "#                                                                          else 0,axis = 1)\n",
-    "\n",
-    "#     true_positive = simulation_comparison['both_infected'].sum()\n",
-    "#     total_predicted_positive = len(simulation_comparison[np.isnan(simulation_comparison['nw_time_lapsed']) == False])\n",
-    "#     precision = true_positive/total_predicted_positive\n",
-    "#     total_actual_positive = len(simulation_comparison[np.isnan(simulation_comparison['usr_time_lapsed']) == False])\n",
-    "#     recall = true_positive/total_actual_positive\n",
-    "#     f1_score = (2*(precision * recall))/(precision + recall)\n",
-    "#     print('true_positive: '+str(true_positive))\n",
-    "#     print('total_predicted_positive: '+str(total_predicted_positive))\n",
-    "#     print('precision: '+str(precision))\n",
-    "#     print('recall: '+str(recall))\n",
-    "#     print('f1_score: '+str(f1_score))\n",
     "    \n",
-    "    true_predicted = 0\n",
-    "    for each in infected_record:\n",
-    "        if each > 3462 and each< 5011:\n",
-    "            true_predicted+=1\n",
-    "    print('true_predicted: '+str(true_predicted))\n",
-    "    print('total predictedt: '+str(len(infected_record)))\n",
-    "    print('false: '+str(len(infected_record)-true_predicted))\n",
+    "    \n",
+    "#     true_predicted = 0\n",
+    "#     for each in infected_record:\n",
+    "#         if each > 3462 and each< 5011:\n",
+    "#             true_predicted+=1\n",
+    "#     print('total positive prediction: '+str(len(infected_record)))\n",
+    "#     print('total true posisive: '+str(true_predicted))\n",
+    "#     print('total false posisive: '+str(len(infected_record)-true_predicted))\n",
+    "#     print('precision: '+str( true_predicted/len(infected_record) ))\n",
     "    \n",
     "\n",
     "# Try saving your model after you train on the first batch. Then, on successive runs, provide the xgb.train method with the \n",
@@ -8690,7 +8681,7 @@
     "initial_features_path = 'F:\\\\twitter_data\\\\givenchy\\\\pickle\\\\feature_6_hour.pkl'\n",
     "user_data_path = 'F:\\\\twitter_data\\\\givenchy\\\\pickle\\\\users.dat'\n",
     "model_path = 'F:\\\\twitter_data\\\\givenchy\\\\pickle\\\\trained_model.dat'\n",
-    "simulation_result_path = 'F:\\\\twitter_data\\\\givenchy\\\\pickle\\\\simulation_result_6_hour.pkl'\n",
+    "simulation_result_path = 'F:\\\\twitter_data\\\\givenchy\\\\pickle\\\\simulation_result_6_hour.csv'\n",
     "total_time_duration = 510\n",
     "interval = 30\n",
     "current_time = 360\n",
@@ -8699,14 +8690,7 @@
     "\n",
     "simulation_process(current_time, total_time_duration, interval, initial_features_path, network_path, user_data_path, model_path, model_params, simulation_result_path)\n",
     "\n",
-    "\"\"\"\n",
-    "end of 540 min\n",
-    "TRUE: 2510 users to predict, 1548 users should be infected\n",
-    "Prediction: predicted 515 users as infected, 498 are predicted correctly.\n",
-    "precision: total true positive/total positive prediction = 498/515 = 0.967\n",
-    "recall: total true positive / actual positive = 0.322\n",
-    "F1 = 2*precision*recall/(precision+recall) = 0.622/1.289 = 0.483\n",
-    "\"\"\"\n"
+    "\n"
    ]
   }
  ],
